--- a/_posts/2015-05-04-ggplot7.md
+++ b/_posts/2015-05-04-ggplot7.md
@@ -4,7 +4,7 @@ comments: true
 date: 2015-05-04 10:53:31
 layout: post
 slug: ggplot7
-title: 用ggplot绘图（六）
+title: 用ggplot绘图（七）
 categories: [ggplot]
 tags:
 - R
@@ -14,6 +14,7 @@ tags:
 <h1>facet: 另一种展示分组数据的方法</h1>
 <p>用过其他绘图库的用户可能知道一般的绘图库都会提供类似于Matlab中subplot的将一个图形分割为多个坐标轴的功能。然而前面的内容里完全没有提到ggplot可以达到这个功能，而且似乎看起来这个观念和ggplot完全不相容。因为，ggplot的目的在于将数据按照一个模型展示出来，所以不支持将多种模型的图形放置到一个图形中是很自然的。当然，用户可以将两个无关的ggplot图形放置到一个图形中，不过这个观念在ggplot中是没有必要实现的。认真的读者已经发现了，前面我说的是不支持将多种<strong>不同</strong>模型的图形，那么自然的如果描述数据的模型是一致的，是不是ggplot就支持呢？答案是确实如此。</p>
 <p>在ggplot将这种将数据分割到不同坐标轴展示的方法和按照不同颜色，大小展示分组数据的概念等价起来了。因为用不同的坐标轴展示和用不同的标记字符，或者颜色等实际上都是将数据按照某变量分组显示，所以可以认为这只是另外一种分组展示数据的方法。在ggplot里这种展示方法被称作facet。</p>
+
 <p>在ggplot默认支持<em>三种</em>facet方案：</p>
 <p>第一种就是默认值，所有数据都在一个坐标轴下展示，叫做<code>facet_null</code>。这个不是很有意思。</p>
 <pre class="r"><code>qplot(carat,price,color=color,data=diamonds,
