--- a/_posts/2015-06-06-cone.md
+++ b/_posts/2015-06-06-cone.md
@@ -9,7 +9,7 @@ categories: [Mathematica]
 tags:
 - Mathematica
 ---
-![](/public/images/con.png)
+![](/public/images/cone.png)
 学习圆锥曲线的时候一直感觉课本上那个图很好看，所以也来画画看。
 
 接着上面的文章，先画没有圆柱的：
