--- a/_posts/2016-02-27-testgit.markdown
+++ b/_posts/2016-02-27-testgit.markdown
@@ -9,4 +9,5 @@ categories: [System]
 tags:
 - Opinion
 ---
-This is a test post.
+![](/public/welcome.jpg)
+写这个网站其实一直以来都感觉心有余力不足的感觉，虽然我已经拿庄子的话当挡箭牌了，但是还是觉得需要更多的深刻的思想注入这个网站才会更有看头，也更名副其实。加强自身的学习来获得更多地思想固然是一条很好地途径，我也希望能够沿着这个道路有更远的造诣，但是能够邀请更多的作者加入这个网站则更是增加这个网站深度和广度的非常有效地途径。很显然，说了那么多废话的目的是想说我们有一个**新作者**了！
