fix due to backend upgrade

--- a/_posts/whyhow/2016-04-01-report2.markdown
+++ b/_posts/whyhow/2016-04-01-report2.markdown
@@ -13,7 +13,7 @@ tags:
 -  可视化
 ---
 <div class="forward">本文转载自新网站同名文章：<a href="https://whyhow.github.io/2016/04/01/report2.html">https://whyhow.github.io/2016/04/01/report2.html</a></div>
-<p>昨天我们分析了<a href="{% post_url 2016-03-31-Report %}">一组新加坡的死亡人口统计数据</a>，今天我们分析下另外一组新加坡的<a href="https://data.gov.sg/dataset/deaths-by-age-group-occupation-and-sex">死亡人口数据</a>：死亡人数与职业的数据。下面是数据表中对于职业的分类：</p>
+<p>昨天我们分析了<a href="{% post_url whyhow/2016-03-31-Report %}">一组新加坡的死亡人口统计数据</a>，今天我们分析下另外一组新加坡的<a href="https://data.gov.sg/dataset/deaths-by-age-group-occupation-and-sex">死亡人口数据</a>：死亡人数与职业的数据。下面是数据表中对于职业的分类：</p>
 <div id="occupation" class="section level2">
 <h2>Occupation</h2>
 <p>Agricultural &amp; Fishery Workers<br />
